--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ indent_style = space
 indent_size = 4
 end_of_line = lf
 insert_final_newline = true
-trim_trailing_whitespace = true
+# trim_trailing_whitespace = true
 
 # md files
 [*.md]
